--- a/wave/index.html
+++ b/wave/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewpoint" content="width=device-width, initial-scale=1, maximum-sacle=1, user-scalable=0">
         <title></title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <script type="module" src="app.js"></script>
